fix: vertical gap

--- a/src/style.css
+++ b/src/style.css
@@ -2,16 +2,8 @@ body {
   margin: 0;
 }
 
-.stars {
-  display: flex;
-  height: 20px;
-}
-
-.stars:last-of-type {
-  height: 16px;
-}
-
 .stars__star {
+  display: inline-block;
   width: 16px;
   height: 16px;
   margin-right: 4px;
